<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="box_program">Box Program:</string>
    <string name="no">NO</string>
    <string name="bsn_given">BSN Given:</string>
    <string name="yes">YES</string>
    <string name="version_year">Version/Year</string>
    <string name="internet_set_up">Internet Set Up:</string>
    <string name="master_user">Master User</string>
    <string name="approval_routing">Approval Routing</string>
    <string name="app_name">DPCApp</string>
    <string name="next">NEXT</string>
    <string name="delivery_locations_outside_zone_us">Delivery locations outside zone/US:</string>
    <string name="wcw_employees">WCW/Employees:</string>
    <string name="input_text">Input text</string>
    <string name="salesperson_name">Salesperson Name:</string>
    <string name="input_name">Input name</string>
    <string name="sales_id">Sales ID:</string>
    <string name="input_id">Input ID</string>
    <string name="choose_your_company">Choose your company</string>
    <string name="company_name">Company Name:</string>
    <string name="input_company">Input Company</string>
    <string name="address_1_billing">Address 1(Billing):</string>
    <string name="input_address_1">Input Address 1</string>
    <string name="address_2">Address 2:</string>
    <string name="input_address_2">Input Address 2</string>
    <string name="city">City:</string>
    <string name="input_city">Input City</string>
    <string name="state">State:</string>
    <string name="input_state">Input State</string>
    <string name="zip">Zip:</string>
    <string name="input_zip">Input Zip</string>
    <string name="phone">Phone:</string>
    <string name="input_phone">Input phone #</string>
    <string name="cell">Cell:</string>
    <string name="input_cell">Input cell #</string>
    <string name="fax">Fax:</string>
    <string name="input_fax">Input fax #</string>
    <string name="primary_ap_contact_name">Primary AP Contact Name:</string>
    <string name="input_contact_name">Input contact name</string>
    <string name="other">Other:</string>
    <string name="input_additional_contact">Input additional contact</string>
    <string name="input_email">Input email</string>
    <string name="input_data">Input data</string>
    <string name="email">Email:</string>
    <string name="email_invoices">Email Invoices:</string>
    <string name="p_o_required">P.O. Required:</string>
    <string name="taxable">Taxable:</string>
    <string name="payment_type">Payment Type:</string>
    <string name="notes">Notes:</string>
    <string name="input_any_additional_notes">Input any additional notes.</string>
    <string name="is_delivery_information_the_same_as_billing">Is delivery information the same as billing?</string>
    <string name="delivery_address_1_billing">Delivery Address 1(Billing):</string>
    <string name="delivery_address_2">Delivery Address 2:</string>
    <string name="delivery_city">Delivery City:</string>
    <string name="delivery_state">Delivery State:</string>
    <string name="delivery_zip">Delivery Zip:</string>
    <string name="delivery_phone">Delivery Phone:</string>
    <string name="delivery_cell">Delivery Cell:</string>
    <string name="delivery_fax">Delivery Fax:</string>
    <string name="primary_buyer_name">Primary Buyer Name:</string>
    <string name="primary_buyer_phone">Primary Buyer Phone:</string>
    <string name="primary_buyer_cell">Primary Buyer Cell:</string>
    <string name="primary_buyer_other">Primary Buyer Other:</string>
    <string name="special_delivery_notes">Special Delivery Notes:</string>
    <string name="input_delivery_notes">Input delivery notes</string>
    <string name="create_customer_account">Create Customer Account</string>
    <string name="inbox">Inbox</string>
    <string name="order_status">Account Status</string>
    <string name="my_account">My Profile</string>
    <string name="log_out">Log out</string>
    <string name="login">LOGIN</string>

    <string name="welcome_to_the_detroit_pencil_company_account_creator">Welcome to the Detroit Pencil Company Account Creator</string>
    <string name="username">Username</string>
    <string name="example_company_com">example@company.com</string>
    <string name="password">Password</string>
    <string name="hidden_password">**********</string>
    <string name="or">OR</string>
    <string name="register">REGISTER</string>
    <string name="inbox_empty">Inbox empty</string>
    <string name="date_submitted">Date submitted</string>
    <string name="company">Company</string>
    <string name="paper_brand">Paper Brand:</string>
    <string name="toner_brand">Toner Band:</string>
    <string name="matrix">Matrix:</string>
    <string name="usa_express">USA/Express:</string>
    <string name="cost_plus">Cost Plus:</string>
    <string name="custom_price">Custom Price:</string>
    <string name="input_notes">Input notes</string>
    <string name="submit_pricing">SUBMIT PRICING</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="aleardy_have_an_account">Aleardy have an account?</string>
    <string name="log_in">LOG IN</string>
    <string name="salesperson_info">Salesperson Info</string>
    <string name="salesperson">Salesperson:</string>
    <string name="craig_contrill">Craig Contrill</string>
    <string name="_123456">123456</string>
    <string name="sales_company">Sales Company:</string>
    <string name="customer_info">Customer Info</string>
    <string name="locations">Locations</string>
    <string name="adrress_1">Adrress 1:</string>
    <string name="address_1">Address 1</string>
    <string name="employees">Employees</string>
    <string name="additional_customer_info">Additional Customer Info</string>
    <string name="primary_ap_contact_info">Primary AP Contact Info</string>
    <string name="primary_contact">Primary Contact:</string>
    <string name="contact_name">Contact name</string>
    <string name="company_something_com">company@something.com</string>
    <string name="additional_info">Additional Info</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="same_as_billing">Same as Billing?</string>
    <string name="primary_buyer">Primary Buyer:</string>
    <string name="primary_buyer_info">Primary Buyer Info</string>
    <string name="buyer_name">Buyer name</string>
    <string name="version_year_caps">Version/Year:</string>
    <string name="version">Version</string>
    <string name="company_goes_here">Company goes here</string>
    <string name="select_phase">Select Phase:</string>
    <string name="in_progress_phase_2">In Progress: Phase 2</string>
    <string name="in_progress_phase_3">In Progress: Phase 3</string>
    <string name="complete">Complete</string>

</resources>