<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/registerView"
    tools:context="com.detroitpencil.jjpod.dpcapp.LoginScreen">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <TextView
            android:layout_marginTop="24dp"
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/example_company_com"
            android:inputType="textWebEmailAddress"
            android:textAlignment="center"
            android:textSize="24sp"
            android:minWidth="250dp"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/hidden_password"
            android:inputType="textPassword"
            android:minWidth="250dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_password"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextPasswordCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/hidden_password"
            android:inputType="textPassword"
            android:minWidth="250dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/select_phase"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/spinner_bg"
            android:layout_marginTop="8dp"
            android:minWidth="285dp"
            android:entries="@array/phases"/>

        <Button
            android:id="@+id/regButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:text="@string/register" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/aleardy_have_an_account"/>
        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_in"
            android:textColor="@android:color/holo_blue_dark"/>

    </LinearLayout>
</ScrollView>

